# duo-media-examples

./: README-zh.md  README.md
cmake/: musl_riscv64.cmake  riscv64.cmake
utils/: CMakeLists.txt  util.cpp  util.h
video_player/: CMakeLists.txt  build.sh
video_player/src/: app_service.cpp  fb_display.cpp  log.cpp  video_decoder.cpp
video_player_fb/: CMakeLists.txt
video_player_vo/: CMakeLists.txt
video_recorder/: CMakeLists.txt
video_recorder/src/: app_service.cpp  cvi_sdk.cpp  video_record.cpp  video_record.h
video_recording/: CMakeLists.txt
video_recording/src/: app_service.cpp  app_service.h  cvi_sdk.h  video_record.cpp  video_record.h
